Fixed wrapping of indicators

--- a/src/accessible-bootstrap-carousel.scss
+++ b/src/accessible-bootstrap-carousel.scss
@@ -142,6 +142,7 @@ $carousel-fontawesome-4: false !default;
     bottom: auto;
     padding: 0;
     margin: auto;
+    flex-wrap: wrap;
   
     li {
       @extend .btn;
@@ -152,7 +153,7 @@ $carousel-fontawesome-4: false !default;
       min-width: 30px;
       width: auto;
       height: auto;
-      margin: 0 0 0 0.25rem;
+      margin: .25rem 0 .25rem .25rem;
       text-indent: unset;
   
       &.active {
@@ -206,7 +207,6 @@ $carousel-fontawesome-4: false !default;
         @extend .fa;
         content: fa-content($fa-var-angle-left);
       }
-      
     }
   }
   .carousel-control-next-icon::before {
